# avfcomp

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
avfcomp/: __init__.py  base.py  basecomp.py  comp.py  comptype.py  config.py  decomp.py  exceptions.py  handler.py
docs/: index.html  main.py  pyscript.json
tests/: test.py
