[project]
name = "avfcomp"
version = "1.4.2"
description = "A compression/decompression library for AVF files."
authors = [
    {name = "Cai Li"},
    {name = "Tony Xiang"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["minesweeper", "compression", "decompression"]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License"
]

dependencies = []

[tool.setuptools.packages.find]
where = ["avfcomp"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.pylint]
max-line-length = 110
disable = ["invalid-name", "unspecified-encoding"]
